--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -26,7 +26,7 @@ env:
 jobs:
   unit-test-linux:
     name: Linux unit tests
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -41,7 +41,7 @@ jobs:
 
   test-go-linux-jdk8:
     name: Linux unit tests for Go on JDK 8
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -60,7 +60,7 @@ jobs:
 
   test-go-linux-jdk11:
     name: Linux unit tests for Go on JDK 11
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -79,7 +79,7 @@ jobs:
 
   check-gen-code:
     name: Checking generated code
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -93,7 +93,7 @@ jobs:
 
   packaging:
     name: Build and upload artifacts into GH Release assets
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [ unit-test-linux, test-go-linux-jdk8, test-go-linux-jdk11, check-gen-code ]
 
     steps:
@@ -135,7 +135,7 @@ jobs:
 
   publishing-to-s3:
     name: Publish linux artifacts into s3 staging bucket
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [ packaging, packaging-msi ]
 
     steps:
@@ -167,7 +167,7 @@ jobs:
           aws_region: ${{ env.AWS_REGION }}
           aws_role_session_name: ${{ env.AWS_ROLE_SESSION_NAME }}
           aws_role_arn: ${{ env.AWS_ROLE_ARN }}
-          dest_prefix: "rahul_testing_nrjmx_fips/"
+          # dest_prefix: "testing_nrjmx_fips/"
           # used for signing package stuff
           gpg_passphrase: ${{ env.GPG_PASSPHRASE }}
           gpg_private_key_base64: ${{ env.GPG_PRIVATE_KEY_BASE64 }}
@@ -194,19 +194,20 @@ jobs:
           aws_region: ${{ env.AWS_REGION }}
           aws_role_session_name: ${{ env.AWS_ROLE_SESSION_NAME }}
           aws_role_arn: ${{ env.AWS_ROLE_ARN }}
-          dest_prefix: "rahul_testing_nrjmx_fips/"
+          # dest_prefix: "testing_nrjmx_fips/"
           # used for signing package stuff
           gpg_passphrase: ${{ env.GPG_PASSPHRASE }}
           gpg_private_key_base64: ${{ env.GPG_PRIVATE_KEY_BASE64 }}
       
-      - name: Test package from Staging repo
-        uses: newrelic/integrations-pkg-test-action/linux@v1
-        with:
-          tag: ${{ env.TAG }}
-          integration: 'nrjmx'
-          packageLocation: repo
-          stagingRepo: true
-          upgrade: false
+      # Can be enabled after the test action is properly tested for nrjmx
+      # - name: Test package from Staging repo
+      #   uses: newrelic/integrations-pkg-test-action/linux@v1
+      #   with:
+      #     tag: ${{ env.TAG }}
+      #     integration: 'nrjmx'
+      #     packageLocation: repo
+      #     stagingRepo: true
+      #     upgrade: false
           
       - name: Update title for successful pre-release
         if: ${{ github.event.release.prerelease }}
