--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -135,7 +135,7 @@ jobs:
 
   publishing-to-s3:
     name: Publish linux artifacts into s3 staging bucket
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-4-cores
     needs: [ packaging, packaging-msi ]
 
     steps:
